--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
 <resources>
 
     <!-- General -->
-    <string name="app_name">Bluefruit LE</string>
-    <string name="app_full_name">Bluefruit LE Connect</string>
+    <string name="app_name">Water Tracker</string>
+    <string name="app_full_name">Water Tracker</string>
     <string name="action_info">Info</string>
     <string name="action_mqttsettings">MQTT</string>
     <string name="action_settings">Settings</string>
