--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,9 @@
     <string name="action_firmwareupdates">Firmware Updates</string>
     <string name="action_refreshcache">Refresh Bluetooth Cache</string>
     <string name="action_about">About</string>
+    <string name="get_token">Get Token</string>
+    <string name="delete_token">Delete Token</string>
+    <string name="token_fitbit_implicit">fitbit</string>
 
     <!-- Bluetooth Adapter -->
     <string name="dialog_error_no_ble">Bluetooth Low Energy not supported</string>
